# polaris-chronos

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_AR.md
scripts/: global_maghrib_test.py
src/: hijri.rs  lib.rs  lunar.rs  main.rs  schedule.rs  solar.rs  solver.rs
src/location/: cache.rs  mod.rs  providers.rs  resolver.rs  types.rs
src/server/: handlers.rs  mod.rs  state.rs  static_files.rs
static/: app.js  index.html  style.css
