[package]
name = "polaris_chronos"
version = "0.7.0"
edition = "2021"
description = "Virtual Horizon prayer time engine — solves the Polar Paradox via angular dynamics"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
dirs = "5"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[[bin]]
name = "polaris"
path = "src/main.rs"
